--- a/app/globals.css
+++ b/app/globals.css
@@ -3,24 +3,24 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --greenBorder: #8BAEAC
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-greeenborder: var(--greenBorder);
+  --font-sans: var(--font-inter-sans);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #fff;
     --foreground: #ededed;
   }
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans);
 }
